--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,27 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(dataset_ros)
 
-find_package(catkin REQUIRED roslaunch)
+find_package(catkin REQUIRED COMPONENTS
+  roslaunch
+  roscpp
+  rospy
+  std_msgs
+)
+
 
 catkin_package(
-    
+ CATKIN_DEPENDS roscpp rospy std_msgs
+)
+
+SET(SCRIPTS
+  nodes/moveforward
 )
 
 install(DIRECTORY launch configuration_files
     DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
-catkin_install_python(PROGRAMS ${SCRIPTS_SRC}
-      DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+catkin_install_python(PROGRAMS ${SCRIPTS}
+      DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+)
 
