--- a/package.xml
+++ b/package.xml
@@ -1,24 +1,23 @@
-<?xml version="1.0"?>
-<package>
+<package format="2">
   <name>dataset_ros</name>
   <version>0.0.0</version>
-  <description>The turtlebot_velodyne package</description>
+  <description>The RGBD-W Dataset package</description>
 
-  <maintainer email="anandbala1597@gmail.com">Anand Balakrishnan</maintainer>
+  <maintainer email="anandbal@buffalo.edu">Anand Balakrishnan</maintainer>
   <license>TODO</license>
 
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>std_msgs</build_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>std_msgs</run_depend>
+  <depend>roscpp</depend>
+  <depend>rospy</depend>
 
-  <!-- The export tag contains other, unspecified, tags -->
+  <depend>std_msgs</depend>
+  <depend>sensor_msgs</depend>
+  <depend>geometry_msgs</depend>
+
+  <depend>nodelet</depend>
+
   <export>
-    <!-- Other tools can request additional information be placed here -->
-
+    <nodelet plugin="${prefix}/nodelets.xml"/>
   </export>
 </package>
