Fixed Nodelet stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,13 +38,11 @@ install(TARGETS err_check err_check_nodelet
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
 
-install(DIRECTORY include/${PROJECT_NAME}/
+install(DIRECTORY include/${PROJECT_NAME}
   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
 
 
 install(DIRECTORY launch configuration_files
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 
-install(FILES nodelets.xml
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 
