--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,27 +3,30 @@ project(dataset_ros)
 
 set(CMAKE_CXX_FLAGS "-std=c++11 ${CMAKE_CXX_FLAGS}")
 
-find_package(catkin REQUIRED COMPONENTS
+set(PACKAGE_DEPS 
   roscpp rospy std_msgs
-  genmsg actionlib_msgs actionlib
+  geometry_msgs sensor_msgs
   nodelet
-  roslint
-)
+  cartographer_ros manual_measurements)
 
+set(PYTHON_SCRIPTS
+  scripts/extract_trajectory.py)
+
+find_package(cartographer REQUIRED)
+include("${CARTOGRAPHER_CMAKE_DIR}/functions.cmake")
+google_initialize_cartographer_project()
+
+
+find_package(catkin REQUIRED COMPONENTS ${PACKAGE_DEPS})
 
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES err_check_nodelet
-  CATKIN_DEPENDS 
-    roscpp rospy std_msgs
-    geometry_msgs sensor_msgs
-    nodelet
-)
+  CATKIN_DEPENDS ${PACKAGE_DEPS})
 
 include_directories(
   include
-  ${catkin_INCLUDE_DIRS}
-)
+  ${catkin_INCLUDE_DIRS})
 
 add_library(err_check_nodelet src/err_check/nodelet.cc)
 target_link_libraries(err_check_nodelet ${catkin_LIBRARIES})
@@ -31,9 +34,15 @@ target_link_libraries(err_check_nodelet ${catkin_LIBRARIES})
 add_executable(err_check src/err_check/node.cc)
 target_link_libraries(err_check ${catkin_LIBRARIES})
 
-roslint_cpp()
+add_executable(dump_trajectory src/dump_trajectory.cc)
+target_link_libraries(dump_trajectory ${catkin_LIBRARIES})
+add_dependencies(dump_trajectory ${catkin_EXPORTED_TARGETS})
+set(TARGET_COMPILE_FLAGS "${TARGET_COMPILE_FLAGS} ${GOOG_CXX_FLAGS}")
+set_target_properties(dump_trajectory PROPERTIES 
+  COMPILE_FLAGS ${TARGET_COMPILE_FLAGS})
 
-install(TARGETS err_check err_check_nodelet
+
+install(TARGETS err_check err_check_nodelet dump_trajectory
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
@@ -45,4 +54,6 @@ install(DIRECTORY include/${PROJECT_NAME}
 install(DIRECTORY launch configuration_files
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 
+#catkin_install_python(PROGRAMS ${PYTHON_SCRIPTS}
+  #DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
